--- a/Aah, Robots!/Aah, Robots!/Aah, Robots!.csproj
+++ b/Aah, Robots!/Aah, Robots!/Aah, Robots!.csproj
@@ -66,7 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Block.cs" />
+    <Compile Include="BlockManager.cs" />
     <Compile Include="Button.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="Map.cs" />
+    <Compile Include="MapManager.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,7 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
-    <Content Include="Maps\Map1.txt" />
+    <Content Include="Maps\mapOne.txt" />
     <Content Include="PhoneGameThumb.png">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </Content>
