--- a/Aah, Robots!/Aah, Robots!/Aah, Robots!.csproj
+++ b/Aah, Robots!/Aah, Robots!/Aah, Robots!.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="PlayerControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpawnableEntity.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="Turret.cs" />
