--- a/Aah, Robots!/Aah, Robots!/Aah, Robots!.csproj
+++ b/Aah, Robots!/Aah, Robots!/Aah, Robots!.csproj
@@ -75,9 +75,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="Tile.cs" />
-    <Compile Include="Turret.cs" />
-    <Compile Include="TurretBase.cs" />
-    <Compile Include="TurretTop.cs" />
     <Compile Include="VirtualThumbstick.cs" />
     <None Include="Properties\AppManifest.xml">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
@@ -90,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
+    <Content Include="mappytest.TXT" />
     <Content Include="Maps\mapOne.txt" />
     <Content Include="PhoneGameThumb.png">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
